--- a/hello.html
+++ b/hello.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Webpage</title>
+    <style>
+        h1 {
+            color: blue;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1 >Hello World</h1>
     <h2>Hello Again</h2>
     <h3>Hello 3</h3>
+    <form>
+        <input type="text" placeholder="Full Name" name="name">
+        <button>Summit</button>
+    </form>
 
 </body>
 </html>
